[gd_scene load_steps=3 format=3 uid="uid://q3sofkfm3603"]

[ext_resource type="Script" path="res://scenes/ui/menus/lobby_menu.gd" id="1_paxxu"]
[ext_resource type="Theme" path="res://ui/title_theme.tres" id="2_t00gu"]

[node name="LobbyMenu" type="MarginContainer" node_paths=PackedStringArray("player_section_container", "play_button", "game_mode_option_button", "time_limit_spin_box", "max_points_spin_box", "deathmatch_options_container", "score_limit_spin_box", "kill_score_spin_box", "death_score_spin_box", "self_destruct_score_spin_box")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_paxxu")
player_section_container = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PlayerSectionContainer")
play_button = NodePath("VBoxContainer/HBoxContainer/PlayButton")
game_mode_option_button = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/GameModeContainer/GameModeOptionButton")
time_limit_spin_box = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/TimeLimitContainer/TimeLimitSpinBox")
max_points_spin_box = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/MaxPointsContainer/MaxPointsSpinBox")
deathmatch_options_container = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer")
score_limit_spin_box = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/ScoreLimitContainer/ScoreLimitSpinBox")
kill_score_spin_box = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/KillScoreContainer/KillScoreSpinBox")
death_score_spin_box = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/DeathScoreContainer/DeathScoreSpinBox")
self_destruct_score_spin_box = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/SelfDestructScoreContainer/SelfDestructScoreSpinBox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_t00gu")
text = "Lobby"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
alignment = 1

[node name="GameModeContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GameModeLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/GameModeContainer"]
layout_mode = 2
text = "Game Mode"

[node name="GameModeOptionButton" type="OptionButton" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/GameModeContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Last Man Standing"
popup/item_0/id = 0
popup/item_1/text = "Deathmatch"
popup/item_1/id = 1

[node name="TimeLimitContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TimeLimitLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/TimeLimitContainer"]
layout_mode = 2
text = "Time Limit"

[node name="TimeLimitSpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/TimeLimitContainer"]
layout_mode = 2
max_value = 3600.0
value = 88.0
rounded = true
update_on_text_changed = true
suffix = "s"

[node name="MaxPointsContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MaxPointsLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/MaxPointsContainer"]
layout_mode = 2
text = "Upgrade Points"

[node name="MaxPointsSpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/MaxPointsContainer"]
layout_mode = 2
max_value = 9.0
value = 8.0
rounded = true
update_on_text_changed = true

[node name="DeathmatchOptionsContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
alignment = 1

[node name="ScoreLimitContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ScoreLimitLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/ScoreLimitContainer"]
layout_mode = 2
text = "Score to Win"

[node name="ScoreLimitSpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/ScoreLimitContainer"]
layout_mode = 2
value = 88.0
rounded = true
update_on_text_changed = true

[node name="KillScoreContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="KillScoreLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/KillScoreContainer"]
layout_mode = 2
text = "Score Per Kill"

[node name="KillScoreSpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/KillScoreContainer"]
layout_mode = 2
min_value = -100.0
value = 88.0
rounded = true
update_on_text_changed = true

[node name="DeathScoreContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="DeathScoreLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/DeathScoreContainer"]
layout_mode = 2
text = "Score Per Death"

[node name="DeathScoreSpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/DeathScoreContainer"]
layout_mode = 2
min_value = -100.0
value = 88.0
rounded = true
update_on_text_changed = true

[node name="SelfDestructScoreContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SelfDestructScoreLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/SelfDestructScoreContainer"]
layout_mode = 2
text = "Score Per Self-Destruct"

[node name="SelfDestructScoreSpinBox" type="SpinBox" parent="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/SelfDestructScoreContainer"]
layout_mode = 2
min_value = -100.0
value = 88.0
rounded = true
update_on_text_changed = true

[node name="PlayerSectionContainer" type="HFlowContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Play"

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="item_selected" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/GameModeContainer/GameModeOptionButton" to="." method="_on_game_mode_option_button_item_selected"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/TimeLimitContainer/TimeLimitSpinBox" to="." method="_on_time_limit_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/MaxPointsContainer/MaxPointsSpinBox" to="." method="_on_max_points_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/ScoreLimitContainer/ScoreLimitSpinBox" to="." method="_on_score_limit_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/KillScoreContainer/KillScoreSpinBox" to="." method="_on_kill_score_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/DeathScoreContainer/DeathScoreSpinBox" to="." method="_on_death_score_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/ScrollContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/DeathmatchOptionsContainer/HFlowContainer/SelfDestructScoreContainer/SelfDestructScoreSpinBox" to="." method="_on_self_destruct_score_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="close"]
